# dimsum-learning

./: .gitattributes  .gitignore  .gitlab-ci.yml  Notes.md  README.md  _CoqProject  build.sh  coq-dimsum.opam  coq-refiris.opam  opam
dimsum/: axioms.v  base.v  coroutine.v  dem_module.v  example_modules.v  filter.v  filter_srefines.v  imp_heap_bij.v  imp_heap_bij_own.v  imp_to_asm.v  int_ptr_cast.v  itree.v  itree_mod.v  link.v  lrefines.v  memmove.v  module.v  nb_mod.v  ordinal.v  prepost.v  print.v  product.v  product_srefines.v  proof_techniques.v  refinement_examples.v  refines_meta.v  satisfiable.v  seq_product.v  spec.v  spec_mod.v  srefines.v  state_transform.v  trace_index.v  trefines.v  universes.v
dimsum/compiler/: linearize.v
dimsum/iris/: combinators.v  expr.v  iris.v  language.v  mono_ord.v  ord_later.v  sat.v  sim.v  sim_steps.v  spec.v  wp.v
dimsum/itree/: asm.v  events.v  itree_lang.v  rec.v  small_itree.v  upstream.v
dimsum/itree/program_logic/: language.v
dimsum_examples/: asm.v  coroutine.v  coroutine_example.v  i2a_bij_vertical.v  imp.v  imp_heap_bij.v  imp_heap_bij_pure.v  imp_to_asm.v  imp_to_asm_examples.v  int_ptr_cast.v  lam.v  lam_examples.v  memmove.v  print.v  r2a_bij_vertical.v  rec.v  rec_heap_bij.v  rec_heap_bij_pure.v  rec_to_asm.v  rec_to_asm_examples.v
dimsum_examples/compiler/: codegen.v  compiler.v  infrastructure.v  linear_imp.v  linear_rec.v  linearize.v  mem2reg.v  monad.v  ssa.v
dimsum_examples/iris/: rec.v
dimsum_examples/learning/: utyped_rec.v  utyped_rec_pure.v  utyped_rec_wasm.v  utyped_stkmach_anf.v  utyped_stkmach_let.v  utyped_wasm_pure.v
theories/: asm.v  axioms.v  base.v  compiler.v  computational.v  coroutine.v  coroutine_example.v  dem_module.v  example_modules.v  filter.v  i2a_bij_vertical.v  imp.v  imp_heap_bij.v  imp_heap_bij_own.v  imp_to_asm.v  imp_to_asm_compiler.v  imp_to_asm_examples.v  int_ptr_cast.v  itree.v  link.v  lrefines.v  memmove.v  mod_old.v  module.v  prepost.v  print.v  product.v  proof_techniques.v  rec_lang.v  refines.v  refines_meta.v  satisfiable.v  seq_product.v  srefines.v  state_transform.v  trace_index.v  trefines.v  while.v
theories/compiler/: codegen.v  compiler.v  infrastructure.v  linear_imp.v  linearize.v  mem2reg.v  monad.v  ssa.v
theories/coro/: coro.v  gthr.c  gthr_old.c
theories/iris/: mono_ord.v  ord_later.v  wp.v
theories/old/: module.v  rec_lang.v
theories/rec_lang/: adequacy.v  examples.v  heap.v  lang.v  lifting.v  proofmode.v
