opam-version: "2.0"
maintainer: "Michael Sammler <msammler@mpi-sws.org>"
authors: "The DimSum team"
license: "BSD-3-Clause"
homepage: "https://gitlab.mpi-sws.org/iris/dimsum"
bug-reports: "https://gitlab.mpi-sws.org/iris/dimsum/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/dimsum.git"
version: "dev"

synopsis: "DimSum"

depends: [
  "coq" { (>= "8.15.0" & < "8.16~") | (= "dev") }
  "coq-iris" { (= "dev.2022-07-15.0.2f866db4") | (= "dev") }
  "coq-itree" { (= "4.0.0") }
  "coq-record-update" { (= "0.3.0") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
