opam-version: "2.0"
maintainer: "Michael Sammler <msammler@mpi-sws.org>"
authors: "The DimSum team"
license: "BSD-3-Clause"
homepage: "https://gitlab.mpi-sws.org/iris/dimsum"
bug-reports: "https://gitlab.mpi-sws.org/iris/dimsum/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/dimsum.git"
version: "dev"

synopsis: "DimSum"

depends: [
  "coq" { (>= "8.16.0" & < "8.17~") | (= "dev") }
  "coq-iris" { (= "dev.2023-03-10.0.45e5a052") | (= "dev") }
  "coq-paco" { (= "4.1.2") } # fix coq-paco version since coq-itree does not build with master
  "coq-itree" { (= "5.0.0") }
  "coq-record-update" { (= "0.3.0") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
