opam-version: "2.0"
maintainer: "Michael Sammler <msammler@mpi-sws.org>"
authors: "The Refiris team"
license: "BSD-3-Clause"
homepage: "https://gitlab.mpi-sws.org/msammler/refinement-framework/stdpp"
bug-reports: "https://gitlab.mpi-sws.org/msammler/refinement-framework/stdpp/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/msammler/refinement-framework/stdpp.git"
version: "dev"

synopsis: "Refiris"

depends: [
  "coq" { (>= "8.13.2" & < "8.14~") | (= "dev") }
  "coq-iris" { (= "dev.2021-01-28.0.bc58a332") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
