opam-version: "2.0"
maintainer: "Michael Sammler <msammler@mpi-sws.org>"
authors: "The Refiris team"
license: "BSD-3-Clause"
homepage: "https://gitlab.mpi-sws.org/msammler/refinement-framework/stdpp"
bug-reports: "https://gitlab.mpi-sws.org/msammler/refinement-framework/stdpp/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/msammler/refinement-framework/stdpp.git"
version: "dev"

synopsis: "Refiris"

depends: [
  "coq" { (>= "8.14.1" & < "8.15~") | (= "dev") }
  "coq-iris" { (= "dev.2021-12-09.1.f52f9f6a") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
