opam-version: "2.0"
maintainer: "Michael Sammler <msammler@mpi-sws.org>"
authors: "The Refiris team"
license: "BSD-3-Clause"
homepage: "https://gitlab.mpi-sws.org/msammler/refinement-framework/stdpp"
bug-reports: "https://gitlab.mpi-sws.org/msammler/refinement-framework/stdpp/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/msammler/refinement-framework/stdpp.git"
version: "dev"

synopsis: "Refiris"

depends: [
  "coq" { (>= "8.15.0" & < "8.16~") | (= "dev") }
  "coq-iris" { (= "dev.2022-01-24.0.72a4bd62") | (= "dev") }
  "coq-itree" { (= "4.0.0") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
